changes to details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Suva,Fiji</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video Games and Music</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be an software developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Sydney, Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To make softwares to make other businesses work better</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/amankmr4">Github</a></li>
         </ul>
     </footer>
 </body>
